# Private

./: .gitignore  README.md  gradlew.bat  settings.gradle
.github/workflows/: android.yml  test.yml  (+1 more)
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/libnode/: .keep
app/src/main/: AndroidManifest.xml
app/src/main/assets/nodejs-project/: android-server.mjs  package.json
app/src/main/assets/nodejs-project/config/: .env
app/src/main/assets/nodejs-project/danmu_api/configs/: globals.js
app/src/main/assets/nodejs-project/danmu_api/utils/: http-util.js
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/danmuapiapp/: AssetCopier.kt  KeepAliveAccessibilityService.kt  MainActivity.kt  NodeBridge.kt  NodeKeepAlive.kt  NodeService.kt  NodeTileService.kt  UiPrefs.kt  UpdateChecker.kt
app/src/main/res/drawable/: bg_action_danger.xml  bg_action_secondary.xml  bg_appbar.xml  bg_card.xml  bg_icon_container.xml  bg_info_banner.xml  bg_main.xml  bg_main_gradient.xml  bg_pill.xml  bg_sheet.xml  bg_sheet_handle.xml  bg_status.xml  bg_url_container.xml  ic_accessibility_24.xml  ic_copy_24.xml  ic_hide_24.xml  ic_info_24.xml  ic_launcher_foreground.xml  ic_open_in_new_24.xml  ic_settings_24.xml  ic_stat_node.xml  ic_theme_24.xml  ic_update_24.xml
app/src/main/res/drawable-night/: bg_main.xml  bg_main_gradient.xml
app/src/main/res/layout/: action_project.xml  activity_main.xml  dialog_settings.xml  sheet_settings.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
(+2 files in other folders)
